--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android = "http://schemas.android.com/apk/res/android"
+<manifest
+	xmlns:android = "http://schemas.android.com/apk/res/android"
 	package = "com.engineerfadyfawzi.pets">
 	
 	<application
@@ -9,13 +10,28 @@
 		android:roundIcon = "@mipmap/ic_launcher_round"
 		android:supportsRtl = "true"
 		android:theme = "@style/AppTheme">
-		<activity android:name = ".MainActivity">
+		
+		<activity
+			android:name = ".CatalogActivity"
+			android:label = "@string/app_name">
 			<intent-filter>
 				<action android:name = "android.intent.action.MAIN" />
 				
 				<category android:name = "android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		
+		<activity
+			android:name = ".EditorActivity"
+			android:label = "@string/editor_activity_title_new_pet"
+			android:parentActivityName = ".CatalogActivity"
+			android:theme = "@style/EditorTheme">
+			<!-- Parent activity meta-data to support 4.0 and lower -->
+			<meta-data
+				android:name = "android.support.PARENT_ACTIVITY"
+				android:value = ".CatalogActivity" />
+		</activity>
+	
 	</application>
 
 </manifest>
